--- a/caughtnbowled/Main.storyboard
+++ b/caughtnbowled/Main.storyboard
@@ -328,7 +328,7 @@
                                             </subviews>
                                         </stackView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OvC-np-WwD">
-                                            <rect key="frame" x="10" y="36.5" width="41.5" height="24"/>
+                                            <rect key="frame" x="10" y="36.5" width="41.5" height="30"/>
                                             <fontDescription key="fontDescription" name="Roboto-Thin" family="Roboto" pointSize="18"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -338,6 +338,7 @@
                                         <constraint firstAttribute="trailing" secondItem="DDO-bq-1O9" secondAttribute="trailing" constant="10" id="3hl-YB-MOs"/>
                                         <constraint firstItem="uv2-nM-baW" firstAttribute="top" secondItem="qsO-KF-og0" secondAttribute="top" constant="5" id="60b-89-8p2"/>
                                         <constraint firstItem="OvC-np-WwD" firstAttribute="leading" secondItem="uv2-nM-baW" secondAttribute="leading" id="BEF-Ki-ayP"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="OvC-np-WwD" secondAttribute="bottom" constant="5" id="N84-rj-i9u"/>
                                         <constraint firstItem="uv2-nM-baW" firstAttribute="width" secondItem="qsO-KF-og0" secondAttribute="width" multiplier="0.8:2" id="S8N-Wn-OaO"/>
                                         <constraint firstItem="uv2-nM-baW" firstAttribute="leading" secondItem="qsO-KF-og0" secondAttribute="leading" constant="10" id="Zka-R3-JnZ"/>
                                         <constraint firstItem="ybw-In-jXp" firstAttribute="centerY" secondItem="uv2-nM-baW" secondAttribute="centerY" id="eIU-c2-5Rm"/>
@@ -424,13 +425,59 @@
                                     <outlet property="wickets" destination="q5Y-nN-34b" id="8fH-Fx-2qL"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentaryCell" rowHeight="80" id="lpV-UG-Omc" customClass="BowlerRecordCell" customModule="Bowled" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="332" width="375" height="80"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="commentaryCell" rowHeight="200" id="lpV-UG-Omc" customClass="CommentaryCell" customModule="Bowled" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="332" width="375" height="200"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lpV-UG-Omc" id="gWa-Ph-kTM">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="79"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="199"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4fo-al-vtI">
+                                            <rect key="frame" x="18" y="89.5" width="20" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="20" id="YDA-gp-SNp"/>
+                                                <constraint firstAttribute="height" constant="20" id="zZq-3M-IQf"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9bs-Gw-wzT">
+                                            <rect key="frame" x="43" y="89.5" width="40" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="40" id="FEA-gD-pNt"/>
+                                                <constraint firstAttribute="height" constant="20" id="Jgg-yo-CKP"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SN4-Mw-LsF">
+                                            <rect key="frame" x="88" y="13" width="269" height="174"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="9bs-Gw-wzT" firstAttribute="leading" secondItem="4fo-al-vtI" secondAttribute="trailing" constant="5" id="6nD-7g-vem"/>
+                                        <constraint firstItem="4fo-al-vtI" firstAttribute="leading" secondItem="gWa-Ph-kTM" secondAttribute="leadingMargin" constant="10" id="AEe-k0-6f6"/>
+                                        <constraint firstItem="SN4-Mw-LsF" firstAttribute="top" secondItem="gWa-Ph-kTM" secondAttribute="topMargin" constant="5" id="Fvc-Ew-w7q"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="SN4-Mw-LsF" secondAttribute="trailing" constant="10" id="Pba-4v-wRq"/>
+                                        <constraint firstItem="SN4-Mw-LsF" firstAttribute="centerY" secondItem="gWa-Ph-kTM" secondAttribute="centerY" id="dTw-S0-Slx"/>
+                                        <constraint firstItem="SN4-Mw-LsF" firstAttribute="leading" secondItem="9bs-Gw-wzT" secondAttribute="trailing" constant="5" id="fpY-WT-6xy"/>
+                                        <constraint firstItem="4fo-al-vtI" firstAttribute="centerY" secondItem="gWa-Ph-kTM" secondAttribute="centerY" id="jUe-bF-9cj"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="SN4-Mw-LsF" secondAttribute="bottom" constant="5" id="qlK-E3-BYT"/>
+                                        <constraint firstItem="9bs-Gw-wzT" firstAttribute="centerY" secondItem="gWa-Ph-kTM" secondAttribute="centerY" id="tT2-K8-yTR"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="commentLabel" destination="SN4-Mw-LsF" id="PGy-77-tw6"/>
+                                    <outlet property="deliverNumberWidth" destination="FEA-gD-pNt" id="wie-HT-oj5"/>
+                                    <outlet property="deliveryNumber" destination="9bs-Gw-wzT" id="umM-Ox-QVB"/>
+                                    <outlet property="resultLabel" destination="4fo-al-vtI" id="fOZ-u8-iPL"/>
+                                    <outlet property="resultWidth" destination="YDA-gp-SNp" id="e6O-ts-9yv"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
